# kindle-weekly-letter

./: .gitignore  CLAUDE.md  LICENSE  README.md  marketplace.json  pyproject.toml  sources.json
.claude-plugin/: plugin.json
.claude/skills/add-topic/: SKILL.md
.claude/skills/collect-now/: SKILL.md
.claude/skills/compile-now/: SKILL.md
.claude/skills/setup-kindle/: SKILL.md
.claude/skills/sources/: SKILL.md
prompts/: agent_ai_news.md  agent_business.md  agent_english.md  agent_ios.md  agent_news.md  agent_systems_lang.md  daily_collector.md  orchestrator.md  sunday_compiler.md
src/: article_store.py  config.py  content_formatter.py  email_sender.py  epub_builder.py
styles/: kindle.css
templates/: chapter.html  cover.html
